Started making the prob1.py python script

--- a/Asher JuPyter/Exam_P1.ipynb
+++ b/Asher JuPyter/Exam_P1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +119,12 @@
     "    xout = out_vec[:len(g)]\n",
     "    yout = out_vec[len(g):]\n",
     "    \n",
-    "    return xout, yout"
+    "    return np.array([xout]).T, np.array([yout]).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +198,12 @@
     "    xout = out_vec[:len(g)]\n",
     "    yout = out_vec[len(g):]\n",
     "    \n",
-    "    return xout, yout"
+    "    return np.array([xout]).T, np.array([yout]).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,12 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def EqualityQPSolverRange(H,g,A,b):\n",
-    "    Hinv = sp.linalg.inv(H)\n",
+    "    Hinv = sp.linalg.inv(H) #most costly line\n",
     "    A_T = A.T\n",
     "    v = np.linalg.solve(H,g)\n",
     "    y = np.linalg.solve((A_T@Hinv@A),b+(A_T@v))\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,6 +301,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def EqualityQPSolver(H,g,A,b,solver=\"LDLdense\"):\n",
+    "    if solver == \"LUdense\":\n",
+    "        return EqualityQPSolverLUdense(H,g,A,b)\n",
+    "    if solver == \"LUsparse\":\n",
+    "        return EqualityQPSolverLUsparse(H,g,A,b)\n",
+    "    if solver == \"LDLdense\":\n",
+    "        return EqualityQPSolverLDLdense(H,g,A,b)\n",
+    "    if solver == \"LDLsparse\":\n",
+    "        return EqualityQPSolverLDLsparse(H,g,A,b)\n",
+    "    if solver == \"Range\":\n",
+    "        return EqualityQPSolverRange(H,g,A,b)\n",
+    "    if solver == \"Null\":\n",
+    "        return EqualityQPSolverNull(H,g,A,b)\n",
+    "    #specialty solvers:\n",
+    "    if solver == \"LUsparse_smart\":\n",
+    "        return EqualityQPSolverLUsparse_smart(H,g,A,b)\n",
+    "    else:\n",
+    "        raise ValueError(\"###---Unknown Solver---###\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- LUdense -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LUsparse -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LDLdense -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LDLsparse -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- Range -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- Null -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LUsparse_smart -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "solvers = [\"LUdense\",\"LUsparse\",\"LDLdense\",\"LDLsparse\",\"Range\",\"Null\",\"LUsparse_smart\"]\n",
+    "for s in solvers:\n",
+    "    print(\"-----\",s,\"-----\")\n",
+    "    x, y = EqualityQPSolver(H,g,A,b,s)\n",
+    "    print(\"    x.T:\",x.T)\n",
+    "    print(\"x.shape:\",x.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -317,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,9 +420,7 @@
     "    [15],\n",
     "    [1]\n",
     "])\n",
-    "\n",
-    "_, Am = A.shape #note that An = Hn = Hm, so we use Am for the dimensions of the 0 matrix\n",
-    "KKT_np = np.block([[H, -A],[-A.T,np.zeros([Am,Am])]])\n"
+    "\n"
    ]
   },
   {
