--- a/Asher JuPyter/LinearProgram/Asher_LPIP.ipynb
+++ b/Asher JuPyter/LinearProgram/Asher_LPIP.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy as sp\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,8 @@
     "    # This solver is based off of linear program interior partial dual solver made by\n",
     "    # John Bagterp Joergensen in the file \"LPippd.m\" offered in Module 5 Lecutre 07B\n",
     "    # combined with the pseudocode offered on page 19/22 of the Module 5 Lecture 07B\n",
-    "    # document \"LinearOptimizationIP\" on DTU Learn.\n",
+    "    # document \"LinearOptimizationIP\" on DTU Learn. Link below:\n",
+    "    # https://learn.inside.dtu.dk/d2l/le/lessons/242131/topics/973897\n",
     "    #==============================================================\n",
     "    #Initialize Variables:\n",
     "    #==============================================================\n",
