Making comments clearer

--- a/Asher JuPyter/LinearProgram/Asher_LPIP.ipynb
+++ b/Asher JuPyter/LinearProgram/Asher_LPIP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "#    l = | 0|    with l.shape = (45,1)\n",
     "#\n",
     "#    u = |Pd|      so u.shape = (45,1)\n",
-    "#        |Pg|    here Pd and Pg are the imported variables\n",
+    "#        |Pg|    here Pd and Pg are the imported arrays\n",
     "#\n",
     "#==============================================================\n",
     "# Build the matrices into the form\n",
@@ -117,7 +117,7 @@
     "#                 |0 1 0 ... 0 1 0 ... |      \n",
     "#                 | ...       ...      |       This means: A_bar = |A I|\n",
     "#                 | ... 0 1 0 ... 0 1 0|                           |O I|\n",
-    "#                 | ... 0 0 1 ... 0 0 1|       With I.shape = (len(u),len(u))    \n",
+    "#                 | ... 0 0 1 ... 0 0 1|       With I.shape = (len(u),len(u)) = (n,n)   \n",
     "#\n",
     "# Since we have changed variables, we then also have to change our g. We want to minimize g.T @ x. \n",
     "# Luckily for us, z contains all of x as elements. This means we can just have:\n",
@@ -133,6 +133,7 @@
     "#         |   s.t.  A_bar.T @ z = |u| |\n",
     "#         |                  z >= 0   |\n",
     "#         o ------------------------- o \n",
+    "#\n",
     "#==============================================================\n",
     "#Setting up our variables: \n",
     "un, _ = u.shape\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +186,7 @@
     "    eta = 0.99\n",
     "    n, m = A.shape\n",
     "    if type(x) == str: #in case x is not provided, we initialize as ones.\n",
-    "        x = np.ones((n,1))\n",
+    "        x = np.ones_like(g)\n",
     "    la = np.ones( (n,1)) #la is lambda\n",
     "    mu = np.zeros((m,1))\n",
     "    #==============================================================\n",
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +346,9 @@
     "#==============================================================\n",
     "# Our Solution:\n",
     "#==============================================================\n",
-    "zout, mu, la, res = LPippd(g_bar,A_bar,b_bar,z)\n",
+    "#zout, mu, la, res = LPippd(g_bar,A_bar,b_bar) #In theory, LPippd should be able to initialize the unknowns as a vector of 1s\n",
+    "#                                              In practice though, we need to feed it z. Why?\n",
+    "zout, mu, la, res = LPippd(g_bar,A_bar,b_bar,z) \n",
     "zn, _ = zout.shape\n",
     "xout = np.array(zout.flatten()[0:int(zn/2)])\n",
     "print(\"Our Solutiuon:\\n\", xout)\n",
