Made problem 1 python file

--- a/Asher JuPyter/Exam_P1.ipynb
+++ b/Asher JuPyter/Exam_P1.ipynb
@@ -16,19 +16,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - defaults\n",
+      "Platform: osx-arm64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /Users/asherkite/Desktop/School/Courses/OR/github/Constrained-Optimization/.conda\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - pandas\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    bottleneck-1.4.2           |  py311hb9f6ed7_0         127 KB\n",
+      "    numexpr-2.10.1             |  py311h5d9532f_0         185 KB\n",
+      "    pandas-2.2.3               |  py311hcf29cfe_0        14.9 MB\n",
+      "    python-tzdata-2025.2       |     pyhd3eb1b0_0         141 KB\n",
+      "    pytz-2024.1                |  py311hca03da5_0         222 KB\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:        15.6 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  bottleneck         pkgs/main/osx-arm64::bottleneck-1.4.2-py311hb9f6ed7_0 \n",
+      "  numexpr            pkgs/main/osx-arm64::numexpr-2.10.1-py311h5d9532f_0 \n",
+      "  pandas             pkgs/main/osx-arm64::pandas-2.2.3-py311hcf29cfe_0 \n",
+      "  python-tzdata      pkgs/main/noarch::python-tzdata-2025.2-pyhd3eb1b0_0 \n",
+      "  pytz               pkgs/main/osx-arm64::pytz-2024.1-py311hca03da5_0 \n",
+      "\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages:\n",
+      "pandas-2.2.3         | 14.9 MB   |                                       |   0% \n",
+      "pytz-2024.1          | 222 KB    |                                       |   0% \u001b[A\n",
+      "\n",
+      "numexpr-2.10.1       | 185 KB    |                                       |   0% \u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "python-tzdata-2025.2 | 141 KB    |                                       |   0% \u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "bottleneck-1.4.2     | 127 KB    |                                       |   0% \u001b[A\u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "bottleneck-1.4.2     | 127 KB    | ##################################### | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "numexpr-2.10.1       | 185 KB    | ###2                                  |   9% \u001b[A\u001b[A\n",
+      "pandas-2.2.3         | 14.9 MB   |                                       |   0% \u001b[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "bottleneck-1.4.2     | 127 KB    | ##################################### | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "bottleneck-1.4.2     | 127 KB    | ##################################### | 100% \u001b[A\u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "python-tzdata-2025.2 | 141 KB    | #################################5    |  91% \u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "python-tzdata-2025.2 | 141 KB    | ##################################### | 100% \u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "numexpr-2.10.1       | 185 KB    | ##################################### | 100% \u001b[A\u001b[A\n",
+      "pytz-2024.1          | 222 KB    | ##################################### | 100% \u001b[A\n",
+      "\n",
+      "pandas-2.2.3         | 14.9 MB   | ###6                                  |  10% \u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "python-tzdata-2025.2 | 141 KB    | ##################################### | 100% \u001b[A\u001b[A\u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "                                                                                \u001b[A\n",
+      "\n",
+      "                                                                                \u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "                                                                                \u001b[A\u001b[A\u001b[A\n",
+      "\n",
+      "\n",
+      "\n",
+      "                                                                                \u001b[A\u001b[A\u001b[A\u001b[A\n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "#%conda install -c conda-forge cvxopt\n",
     "#%conda install -c conda-forge casadi\n",
     "#%conda install -c conda-forge matplotlib\n",
+    "#%conda install pandas\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,25 +430,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----- LUdense -----\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'H' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[92]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m solvers:\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-----\u001b[39m\u001b[33m\"\u001b[39m,s,\u001b[33m\"\u001b[39m\u001b[33m-----\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     x, y = EqualityQPSolver(\u001b[43mH\u001b[49m,g,A,b,s)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m    x.T:\u001b[39m\u001b[33m\"\u001b[39m,x.T)\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mx.shape:\u001b[39m\u001b[33m\"\u001b[39m,x.shape)\n",
-      "\u001b[31mNameError\u001b[39m: name 'H' is not defined"
+      "----- LUdense -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LUsparse -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LDLdense -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LDLsparse -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- Range -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- Null -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n",
+      "----- LUsparse_smart -----\n",
+      "    x.T: [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]]\n",
+      "x.shape: (5, 1)\n"
      ]
     }
    ],
@@ -370,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6165,32 +6275,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Z_T: (0, 2)\n",
-      "H: (5, 5)\n",
-      "Y: (5, 2)\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "cannot access local variable 'x_Y' where it is not associated with a value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[129]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#First we solve the test problem with one of our solvers:\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m x, y = \u001b[43mEqualityQPSolverNull2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43mg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mx:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m,x.T,\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33my:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m,y.T)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#Next we do so with Casadi\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[128]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mEqualityQPSolverNull2\u001b[39m\u001b[34m(H, g, A, b)\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mH:\u001b[39m\u001b[33m\"\u001b[39m, H.shape)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mY:\u001b[39m\u001b[33m\"\u001b[39m, Y.shape)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mx_Y:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mx_Y\u001b[49m.shape)\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mg:\u001b[39m\u001b[33m\"\u001b[39m, g.shape)\n\u001b[32m     13\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mH @ Y @ x_Y:\u001b[39m\u001b[33m\"\u001b[39m, (H @ Y @ x_Y).shape)\n",
-      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'x_Y' where it is not associated with a value"
+      "x:\n",
+      " [[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]] \n",
+      "y:\n",
+      " [[-0.94962455  0.80823969]]\n",
+      "\n",
+      "qpOASES -- An Implementation of the Online Active Set Strategy.\n",
+      "Copyright (C) 2007-2015 by Hans Joachim Ferreau, Andreas Potschka,\n",
+      "Christian Kirches et al. All rights reserved.\n",
+      "\n",
+      "qpOASES is distributed under the terms of the \n",
+      "GNU Lesser General Public License 2.1 in the hope that it will be \n",
+      "useful, but WITHOUT ANY WARRANTY; without even the implied warranty \n",
+      "of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. \n",
+      "See the GNU Lesser General Public License for more details.\n",
+      "\n",
+      "\n",
+      "qpOASES -- An Implementation of the Online Active Set Strategy.\n",
+      "Copyright (C) 2007-2015 by Hans Joachim Ferreau, Andreas Potschka,\n",
+      "Christian Kirches et al. All rights reserved.\n",
+      "\n",
+      "qpOASES is distributed under the terms of the \n",
+      "GNU Lesser General Public License 2.1 in the hope that it will be \n",
+      "useful, but WITHOUT ANY WARRANTY; without even the implied warranty \n",
+      "of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. \n",
+      "See the GNU Lesser General Public License for more details.\n",
+      "\n",
+      "\n",
+      "\n",
+      "####################   qpOASES  --  QP NO.   1   #####################\n",
+      "\n",
+      "    Iter   |    StepLength    |       Info       |   nFX   |   nAC    \n",
+      " ----------+------------------+------------------+---------+--------- \n",
+      "       0   |   5.707086e-09   |   ADD CON    0   |     4   |     1   \n",
+      "       1   |   1.214114e-09   |   REM BND    4   |     3   |     1   \n",
+      "       2   |   6.199596e-09   |   REM BND    2   |     2   |     1   \n",
+      "       3   |   1.846994e-08   |   REM BND    3   |     1   |     1   \n",
+      "       4   |   3.915624e-08   |   REM BND    1   |     0   |     1   \n",
+      "       5   |   5.594512e-02   |   REM CON    0   |     0   |     0   \n",
+      "       6   |   9.655778e-03   |   ADD CON    0   |     0   |     1   \n",
+      "       7   |   9.058647e-01   |   ADD CON    1   |     0   |     2   \n",
+      "       8   |   1.000000e+00   |    QP SOLVED     |     0   |     2   \n",
+      "[0.15020779 0.1400325  0.35434944 0.09364569 0.26176457]\n",
+      "\n",
+      "qpOASES -- An Implementation of the Online Active Set Strategy.\n",
+      "Copyright (C) 2007-2015 by Hans Joachim Ferreau, Andreas Potschka,\n",
+      "Christian Kirches et al. All rights reserved.\n",
+      "\n",
+      "qpOASES is distributed under the terms of the \n",
+      "GNU Lesser General Public License 2.1 in the hope that it will be \n",
+      "useful, but WITHOUT ANY WARRANTY; without even the implied warranty \n",
+      "of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. \n",
+      "See the GNU Lesser General Public License for more details.\n",
+      "\n",
+      "\n",
+      "qpOASES -- An Implementation of the Online Active Set Strategy.\n",
+      "Copyright (C) 2007-2015 by Hans Joachim Ferreau, Andreas Potschka,\n",
+      "Christian Kirches et al. All rights reserved.\n",
+      "\n",
+      "qpOASES is distributed under the terms of the \n",
+      "GNU Lesser General Public License 2.1 in the hope that it will be \n",
+      "useful, but WITHOUT ANY WARRANTY; without even the implied warranty \n",
+      "of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. \n",
+      "See the GNU Lesser General Public License for more details.\n",
+      "\n",
+      "\n",
+      "\n",
+      "####################   qpOASES  --  QP NO.   1   #####################\n",
+      "\n",
+      "    Iter   |    StepLength    |       Info       |   nFX   |   nAC    \n",
+      " ----------+------------------+------------------+---------+--------- \n",
+      "       0   |   5.707086e-09   |   ADD CON    0   |     4   |     1   \n",
+      "       1   |   1.214114e-09   |   REM BND    4   |     3   |     1   \n",
+      "       2   |   6.199596e-09   |   REM BND    2   |     2   |     1   \n",
+      "       3   |   1.846994e-08   |   REM BND    3   |     1   |     1   \n",
+      "       4   |   3.915624e-08   |   REM BND    1   |     0   |     1   \n",
+      "       5   |   5.594512e-02   |   REM CON    0   |     0   |     0   \n",
+      "       6   |   9.655778e-03   |   ADD CON    0   |     0   |     1   \n",
+      "       7   |   9.058647e-01   |   ADD CON    1   |     0   |     2   \n",
+      "       8   |   1.000000e+00   |    QP SOLVED     |     0   |     2   \n"
      ]
     }
    ],
    "source": [
+    "H = np.array([\n",
+    "    [6.0000, 1.8600, 1.2400, 1.4800, -0.4600],\n",
+    "    [1.8600, 4.0000, 0.4400, 1.1200, 0.5200],\n",
+    "    [1.2400, 0.4400, 3.8000, 1.5600, -0.5400],\n",
+    "    [1.4800, 1.1200, 1.5600, 7.2000, -1.1200],\n",
+    "    [-0.4600, 0.5200, -0.5400, -1.1200, 7.8000]\n",
+    "])\n",
+    "\n",
+    "\n",
+    "g = np.array([\n",
+    "    [-16.1000],\n",
+    "    [-8.5000],\n",
+    "    [-15.7000],\n",
+    "    [-10.0200],\n",
+    "    [-18.6800]\n",
+    "])\n",
+    "\n",
+    "A = np.array([\n",
+    "    [16.1000, 1.0000],\n",
+    "    [8.5000, 1.0000],\n",
+    "    [15.7000, 1.0000],\n",
+    "    [10.0200, 1.0000],\n",
+    "    [18.6800, 1.0000]\n",
+    "])\n",
+    "\n",
+    "\n",
+    "b = np.array([\n",
+    "    [15],\n",
+    "    [1]\n",
+    "])\n",
+    "\n",
+    "\n",
     "#First we solve the test problem with one of our solvers:\n",
     "x, y = EqualityQPSolverNull(H,g,A,b)\n",
     "print(\"x:\\n\",x.T,\"\\ny:\\n\",y.T)\n",
     "\n",
     "#Next we do so with Casadi\n",
     "\n",
-    "Casadi_EC_QP(H,g,A,b)"
+    "print(np.array(Casadi_EC_QP(H,g,A,b)).flatten())\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "Our_x = x.flatten()\n",
+    "Cas_x = np.array(Casadi_EC_QP(H, g, A, b)).flatten()\n",
+    "AbsDif = np.abs(Our_x-Cas_x)\n",
+    "EucDist = np.linalg.norm(Our_x - Cas_x, ord=2)\n",
+    "EucDistVec = np.full(len(Our_x), np.nan)\n",
+    "EucDistVec[0]= EucDist\n",
+    "\n",
+    "# Create a dataframe \n",
+    "df = pd.DataFrame({\n",
+    "    'Our Solution': Our_x,           # Our solution\n",
+    "    'CasADi Solution': Cas_x,        # CasADi's solution\n",
+    "    \"Absolute_Difference\": AbsDif,   # The absolute difference between each component of Our_x and Cas_x\n",
+    "    'Euclidean_Distance': EucDistVec # This is the Euclidean distance between CasADi's solution and ours\n",
+    "})\n",
+    "# Save to CSV\n",
+    "df.to_csv('1.6_Solution_Comparison.csv')"
    ]
   },
   {
